# Error-free-CI-CD-pipeline-for-Python

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
tests/: test_example.py
